locally compiled, nrm, etc

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
+autom4te.cache/
+config.log
+config.status
+TAGS
+Makefile
+hello/Makefile
+hello/yang/Makefile
+hello/src/Makefile
+hello/docker/Makefile
 hello/docker/src
 hello/docker/yang
+openconfig/Makefile
+openconfig/yang/Makefile
+openconfig/src/Makefile
+openconfig/docker/Makefile
 openconfig/docker/src
+nrm/Makefile
+nrm/yang/Makefile
+nrm/src/Makefile
+nrm/docker/Makefile
 nrm/docker/src
 nrm/docker/yang
