--- a/Makefile.in
+++ b/Makefile.in
@@ -30,57 +30,74 @@
 #
 # ***** END LICENSE BLOCK *****
 #
+
+prefix		= @prefix@
+exec_prefix 	= @exec_prefix@
+# abs_top_builddir is by default the absolute path of the builddir.
+includedir	= @includedir@
+datadir 	= @datarootdir@
+localstatedir	= @localstatedir@
+sysconfdir	= @sysconfdir@
+
 VPATH       	= @srcdir@
 srcdir  	= @srcdir@
+libdir		= @libdir@
 top_srcdir  	= @top_srcdir@
-prefix 		= @prefix@
-bindir 		= @bindir@
-includedir	= @includedir@
-datarootdir     = @datarootdir@
-sysconfdir      = @sysconfdir@
-datarootdir	= @datarootdir@
-localstatedir   = @localstatedir@
-libdir          = @exec_prefix@/lib
-
-APPNAME	        = hello
-
 CC		= @CC@
-CFLAGS  	= @CFLAGS@ -fPIC 
-INSTALLFLAGS  	= @INSTALLFLAGS@ 
+CFLAGS  	= @CFLAGS@ 
+LDFLAGS 	= @LDFLAGS@
+LIBS    	= @LIBS@
+INSTALL		= @INSTALL@
 
-INCLUDES 	= -I$(includedir) @INCLUDES@ 
-CPPFLAGS  	= @CPPFLAGS@ -fPIC
+INCLUDES 	= -I. -I@srcdir@ @INCLUDES@
+SHELL		= /bin/sh
 
-.PHONY: all clean depend install 
+SUBDIRS = hello openconfig nrm
 
-all:
+.PHONY:	all clean depend $(SUBDIRS) install uninstall docker push TAGS .config.status
 
-.SUFFIXES: .c .o
+all:	$(SUBDIRS)
 
-# implicit rule
-.c.o:
-	$(CC) $(INCLUDES) $(CPPFLAGS) $(CFLAGS) -c $<
-
-CLISPECS = $(APPNAME)_cli.cli
-
-clean:
-
-distclean: clean
-	rm -f Makefile *~ .depend
-
-install: $(CLISPECS) $(APPNAME).xml
-	install -m 0644 $(APPNAME).xml $(DESTDIR)$(sysconfdir)
-	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)
-	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)/clispec
-	install -m 0644 $(CLISPECS) $(DESTDIR)$(libdir)/$(APPNAME)/clispec
-	install -d -m 0755 $(DESTDIR)$(localstatedir)/$(APPNAME)
-
-uninstall: 
-	rm -rf $(DESTDIR)$(sysconfdir)/$(APPNAME).xml
-	rm -rf $(DESTDIR)$(libdir)/$(APPNAME)
+$(SUBDIRS): 
+	(cd $@ && $(MAKE) $(MFLAGS) all)
 
 depend:
-	$(CC) $(DEPENDFLAGS) $(INCLUDES) $(CFLAGS) -MM $(SRC) > .depend
+	for i in $(SUBDIRS) ; \
+	do (cd $$i && $(MAKE) $(MFLAGS) depend); done
 
-#include .depend
+install:  
+	for i in $(SUBDIRS) ; \
+	do (cd $$i; $(MAKE) $(MFLAGS) $@)||exit 1; done; 
+
+uninstall:
+	for i in $(SUBDIRS) ; \
+	do (cd $$i && $(MAKE) $(MFLAGS) $@)||exit 1; done;
+
+docker:
+	for i in $(SUBDIRS) ; \
+	do (cd $$i && $(MAKE) $(MFLAGS) $@)||exit 1; done;
+
+push:
+	for i in $(SUBDIRS) ; \
+	do (cd $$i && $(MAKE) $(MFLAGS) $@)||exit 1; done; 
+
+config.status:	configure
+	$(SHELL) config.status --recheck
+
+configure:	configure.ac
+	cd $(srcdir) && autoconf
+
+clean:
+	for i in $(SUBDIRS) ; \
+	do (cd $$i && $(MAKE) $(MFLAGS) $@); done; 
+
+distclean:
+	rm -f Makefile TAGS config.status config.log *~ .depend
+	rm -rf autom4te.cache
+	for i in $(SUBDIRS) ; \
+	do (cd $$i && $(MAKE) $(MFLAGS) $@); done
+
+TAGS:
+	find $(srcdir) -name '*.[chyl]' -type f | grep -v \.tab\.[ch] | grep -v lex.*.c | grep -v .yy.c | etags -
+
 
