--- a/hello/yang/Makefile.in
+++ b/hello/yang/Makefile.in
@@ -1,7 +1,7 @@
 #
 # ***** BEGIN LICENSE BLOCK *****
 # 
-# Copyright (C) 2009-2019 Olof Hagsand
+# Copyright (C) 2020 Olof Hagsand and Rubicon Communications, LLC
 #
 # This file is part of CLIXON
 #
@@ -30,41 +30,45 @@
 #
 # ***** END LICENSE BLOCK *****
 #
+VPATH       	= @srcdir@
+srcdir  	= @srcdir@
+top_srcdir  	= @top_srcdir@
+prefix 		= @prefix@
+bindir 		= @bindir@
+includedir	= @includedir@
+datarootdir     = @datarootdir@
+sysconfdir      = @sysconfdir@
+datarootdir	= @datarootdir@
+localstatedir   = @localstatedir@
+libdir          = @exec_prefix@/lib
 
-srcdir  	= .
-top_srcdir  	= ../..
+INSTALLFLAGS  	= @INSTALLFLAGS@ 
 
-# docker.hub image. CHANGE THIS IF YOU PUSH YOUR OWN
-IMG   = clixon/hello
+# Here is where example yang appears
+YANG_INSTALLDIR  = @YANG_INSTALLDIR@
 
-.PHONY: all clean distclean docker push depend install-include install uninstall
+# Local yang files to install
+YANGSPECS	 = clixon-hello@2019-04-17.yang
 
-all:	
-	echo "Run make docker to build docker image"
+.PHONY: all clean distclean install uninstall depend
+
+all:
 
 clean:
-	rm -rf yang src
 
 distclean: clean
 	rm -f Makefile *~ .depend
 
-yang:
-	cp -R ${srcdir}/../$@ .
+install: $(YANGSPECS)
+	install -d -m 0755 $(DESTDIR)$(YANG_INSTALLDIR)
+	install -m 0644 $(YANGSPECS) $(DESTDIR)$(YANG_INSTALLDIR)
 
-src:
-	cp -R ${srcdir}/../$@ .
-
-docker: Dockerfile yang src
-	sudo docker build -t $(IMG) .  # --no-cache
-
-push:
-	sudo docker push $(IMG)
+uninstall: 
+	for i in $(YANGSPEC) ; \
+	do rm $(DESTDIR)$(YANG_INSTALLDIR)/$$i; done
 
 depend:
+	$(CC) $(DEPENDFLAGS) $(INCLUDES) $(CFLAGS) -MM $(SRC) > .depend
 
-install-include:
-
-install:
-
-uninstall:
+#include .depend
 
