--- a/nrm/src/Makefile.in
+++ b/nrm/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # ***** BEGIN LICENSE BLOCK *****
 # 
-# Copyright (C) 2009-2019 Olof Hagsand
+# Copyright (C) 2020 Olof Hagsand and Rubicon Communications, LLC
 #
 # This file is part of CLIXON
 #
@@ -30,38 +30,57 @@
 #
 # ***** END LICENSE BLOCK *****
 #
+VPATH       	= @srcdir@
+srcdir  	= @srcdir@
+top_srcdir  	= @top_srcdir@
+prefix 		= @prefix@
+bindir 		= @bindir@
+includedir	= @includedir@
+datarootdir     = @datarootdir@
+sysconfdir      = @sysconfdir@
+datarootdir	= @datarootdir@
+localstatedir   = @localstatedir@
+libdir          = @exec_prefix@/lib
 
-srcdir  	= .
-top_srcdir  	= ../..
+APPNAME	        = nrm
 
-# docker.hub image. CHANGE THIS IF YOU PUSH YOUR OWN
-IMG   = clixon/openconfig-system
+CC		= @CC@
+CFLAGS  	= @CFLAGS@ -fPIC 
+INSTALLFLAGS  	= @INSTALLFLAGS@ 
 
-.PHONY: all clean distclean docker push depend install-include install uninstall
+INCLUDES 	= -I$(includedir) @INCLUDES@ 
+CPPFLAGS  	= @CPPFLAGS@ -fPIC
 
-all:	
-	echo "Run make docker to build docker image"
+.PHONY: all clean depend install 
+
+all:
+
+.SUFFIXES: .c .o
+
+# implicit rule
+.c.o:
+	$(CC) $(INCLUDES) $(CPPFLAGS) $(CFLAGS) -c $<
+
+CLISPECS = $(APPNAME)_cli.cli
 
 clean:
-	rm -rf src
 
 distclean: clean
 	rm -f Makefile *~ .depend
 
-src:
-	cp -R ${srcdir}/../$@ .
+install: $(CLISPECS) $(APPNAME).xml
+	install -m 0644 $(APPNAME).xml $(DESTDIR)$(sysconfdir)
+	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)
+	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)/clispec
+	install -m 0644 $(CLISPECS) $(DESTDIR)$(libdir)/$(APPNAME)/clispec
+	install -d -m 0755 $(DESTDIR)$(localstatedir)/$(APPNAME)
 
-docker: Dockerfile src
-	sudo docker build -t $(IMG) .  # --no-cache
-
-push:
-	sudo docker push $(IMG)
+uninstall: 
+	rm -rf $(DESTDIR)$(sysconfdir)/$(APPNAME).xml
+	rm -rf $(DESTDIR)$(libdir)/$(APPNAME)
 
 depend:
+	$(CC) $(DEPENDFLAGS) $(INCLUDES) $(CFLAGS) -MM $(SRC) > .depend
 
-install-include:
-
-install:
-
-uninstall:
+#include .depend
 
