--- a/openconfig/docker/Makefile.in
+++ b/openconfig/docker/Makefile.in
@@ -30,57 +30,36 @@
 #
 # ***** END LICENSE BLOCK *****
 #
-VPATH       	= @srcdir@
-srcdir  	= @srcdir@
-top_srcdir  	= @top_srcdir@
-prefix 		= @prefix@
-bindir 		= @bindir@
-includedir	= @includedir@
-datarootdir     = @datarootdir@
-sysconfdir      = @sysconfdir@
-datarootdir	= @datarootdir@
-localstatedir   = @localstatedir@
-libdir          = @exec_prefix@/lib
 
-APPNAME	        = hello
+srcdir  	= .
+top_srcdir  	= ../..
 
-CC		= @CC@
-CFLAGS  	= @CFLAGS@ -fPIC 
-INSTALLFLAGS  	= @INSTALLFLAGS@ 
+# docker.hub image. CHANGE THIS IF YOU PUSH YOUR OWN
+IMG   = clixon/openconfig-system
 
-INCLUDES 	= -I$(includedir) @INCLUDES@ 
-CPPFLAGS  	= @CPPFLAGS@ -fPIC
+.PHONY: all clean distclean docker push depend install uninstall
 
-.PHONY: all clean depend install 
-
-all:
-
-.SUFFIXES: .c .o
-
-# implicit rule
-.c.o:
-	$(CC) $(INCLUDES) $(CPPFLAGS) $(CFLAGS) -c $<
-
-CLISPECS = $(APPNAME)_cli.cli
+all:	
+	echo "Run make docker to build docker image"
 
 clean:
+	rm -rf src
 
 distclean: clean
 	rm -f Makefile *~ .depend
 
-install: $(CLISPECS) $(APPNAME).xml
-	install -m 0644 $(APPNAME).xml $(DESTDIR)$(sysconfdir)
-	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)
-	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)/clispec
-	install -m 0644 $(CLISPECS) $(DESTDIR)$(libdir)/$(APPNAME)/clispec
-	install -d -m 0755 $(DESTDIR)$(localstatedir)/$(APPNAME)
+src:
+	cp -R ${srcdir}/../$@ .
 
-uninstall: 
-	rm -rf $(DESTDIR)$(sysconfdir)/$(APPNAME).xml
-	rm -rf $(DESTDIR)$(libdir)/$(APPNAME)
+docker: Dockerfile src
+	sudo docker build -t $(IMG) .  # --no-cache
+
+push:
+	sudo docker push $(IMG)
 
 depend:
-	$(CC) $(DEPENDFLAGS) $(INCLUDES) $(CFLAGS) -MM $(SRC) > .depend
 
-#include .depend
+install: 
+
+uninstall:
 
