--- a/hello/src/Makefile.in
+++ b/hello/src/Makefile.in
@@ -75,6 +75,7 @@ distclean: clean
 	rm -f Makefile *~ .depend
 
 install: $(CLISPECS) $(APPNAME).xml
+	install -d -m 0755 $(DESTDIR)$(sysconfdir)
 	install -m 0644 $(APPNAME).xml $(DESTDIR)$(sysconfdir)
 	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)
 	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)/clispec
