--- a/wifi/src/Makefile.in
+++ b/wifi/src/Makefile.in
@@ -57,9 +57,12 @@ YANG_INSTALLDIR  = @YANG_INSTALLDIR@
 # Local yang files to install
 YANGSPECS	 = clixon-wifi@2021-06-22.yang
 
-.PHONY: all clean depend install 
-
-all:
+# Example backend plugin
+# There may also be restconf/cli/netconf plugins which are not covered here, see
+# eg clixon main example
+PLUGIN       = $(APPNAME)_backend_plugin.so
+PLUGIN_SRC   = $(APPNAME)_backend_plugin.c
+PLUGIN_OBJ   = $(PLUGIN_SRC:%.c=%.o)
 
 .SUFFIXES: .c .o
 
@@ -67,24 +70,33 @@ all:
 .c.o:
 	$(CC) $(INCLUDES) $(CPPFLAGS) $(CFLAGS) -c $<
 
+.PHONY: all clean depend install 
+all: $(PLUGIN)
+
+$(PLUGIN): $(PLUGIN_OBJ)
+	$(CC) -Wall -shared $(LDFLAGS) -o $@ -lc $< -lclixon -lclixon_backend
+
 CLISPECS = $(APPNAME)_cli.cli
 
 clean:
+	rm -f $(PLUGIN) $(PLUGIN_OBJ)
 
 distclean: clean
 	rm -f Makefile *~ .depend
 
-install: $(CLISPECS) $(APPNAME).xml
+install: $(CLISPECS) $(APPNAME).xml $(PLUGIN)
 	install -d -m 0755 $(DESTDIR)$(sysconfdir)
 	install -m 0644 $(APPNAME).xml $(DESTDIR)$(sysconfdir)
 	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)
 	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)/clispec
+	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)/backend
 	install -m 0644 $(CLISPECS) $(DESTDIR)$(libdir)/$(APPNAME)/clispec
 	install -d -m 0755 $(DESTDIR)$(localstatedir)
 	install -d -m 0755 $(DESTDIR)$(localstatedir)/$(APPNAME)
 	install -m 0644 startup_db $(DESTDIR)$(localstatedir)/$(APPNAME)/
 	install -d -m 0755 $(DESTDIR)$(YANG_INSTALLDIR)
 	install -m 0644 $(YANGSPECS) $(DESTDIR)$(YANG_INSTALLDIR)
+	install -m 0644 $(INSTALLFLAGS) $(PLUGIN) $(DESTDIR)$(libdir)/$(APPNAME)/backend
 
 uninstall: 
 	rm -rf $(DESTDIR)$(sysconfdir)/$(APPNAME).xml
