too many includes

--- a/hello/src/Makefile.in
+++ b/hello/src/Makefile.in
@@ -48,7 +48,7 @@ CC		= @CC@
 CFLAGS  	= @CFLAGS@ -fPIC 
 INSTALLFLAGS  	= @INSTALLFLAGS@ 
 
-INCLUDES 	= -I$(includedir) @INCLUDES@ 
+INCLUDES 	= @INCLUDES@ 
 CPPFLAGS  	= @CPPFLAGS@ -fPIC
 
 # Here is where example yang appears
