Updated to Clixon 5.4 and added actions

--- a/3gpp/docker/Dockerfile
+++ b/3gpp/docker/Dockerfile
@@ -1,7 +1,7 @@
 #
 # ***** BEGIN LICENSE BLOCK *****
 # 
-# Copyright (C) 2020 Olof Hagsand and Rubicon Communications, LLC
+# Copyright (C) 2009-2021 Olof Hagsand
 #
 # This file is part of CLIXON
 #
@@ -35,34 +35,51 @@ FROM alpine
 MAINTAINER Olof Hagsand <olof@hagsand.se>
 
 # For clixon and cligen
-RUN apk add --update git make build-base gcc flex bison fcgi-dev curl-dev
+RUN apk add --update git make build-base gcc flex bison curl-dev
+
+# evhtp dependencies
+RUN apk add --update libevent libevent-dev
+
+# nghttp2 dependencies
+RUN apk add --update nghttp2
 
 # Create a directory to hold source-code, dependencies etc
 RUN mkdir /clixon
+
+# clone libevhtp
+WORKDIR /clixon
+
+RUN git clone https://github.com/clicon/clixon-libevhtp.git
+WORKDIR /clixon/clixon-libevhtp
+RUN ./configure
+
+RUN make
+RUN mkdir /usr/local/include
+RUN make install
+
 RUN mkdir /clixon/build
 WORKDIR /clixon
 
 # Clone cligen
-RUN git clone https://github.com/olofhagsand/cligen.git
+RUN git clone https://github.com/clicon/cligen.git
 
 # Build cligen
 WORKDIR /clixon/cligen
-RUN ./configure --enable-debug --prefix=/clixon/build
+RUN ./configure --prefix=/clixon/build
 RUN make
 RUN make install
 
-# For nginx and RESTCONF: Need to add www user manually
-RUN adduser -D -H www-data
-# nginx adds group www-data
-RUN apk add --update nginx
+# Need to add www user manually
+RUN adduser -D -H -G www-data www-data
 
 # Clone clixon
 WORKDIR /clixon
 RUN git clone https://github.com/clicon/clixon.git
+WORKDIR /clixon/clixon
 
 # Configure, build and install clixon
-WORKDIR /clixon/clixon
-RUN ./configure --enable-debug --prefix=/clixon/build --with-cligen=/clixon/build --with-wwwuser=www-data --enable-debug
+RUN ./configure --prefix=/clixon/build --with-cligen=/clixon/build --with-restconf=native --enable-nghttp2 --enable-evhtp
+
 RUN make
 RUN make install
 RUN make install-include
@@ -89,35 +106,30 @@ COPY startsystem.sh /clixon/build/bin/
 
 #
 # Stage 2
-#
+# The second step skips the development environment and builds a runtime system
 FROM alpine
 MAINTAINER Olof Hagsand <olof@hagsand.se>
 
 # For clixon and cligen
-RUN apk add --update flex bison fcgi-dev 
+RUN apk add --update flex bison
 
 # need to add www user manually
-RUN adduser -D -H www-data
-# nginx adds group www-data
-RUN apk add --update nginx
+RUN adduser -D -H -G www-data www-data
+# for libevtp
+RUN apk add --update openssl libevent
 
-# Expose nginx port for restconf
-EXPOSE 80
+# nghttp2 dependencies
+RUN apk add --update nghttp2
+
+# Expose http port for restconf
+EXPOSE 80/tcp
+# EXPOSE 443/tcp
 
 # Create clicon user and group
 RUN adduser -D -H clicon
-RUN adduser nginx clicon
-RUN adduser www-data clicon
 
 COPY --from=0 /clixon/build/ /usr/local/
-COPY --from=0 /www-data /www-data
-
-# Manually created
-RUN chown www-data /www-data
-RUN chgrp www-data /www-data
-
-# For debug
-RUN apk add --update gdb
+COPY --from=0 /usr/local/lib/libevhtp.so* /usr/local/lib/
 
 # Start the backend and restconf deamons
 CMD /usr/local/bin/startsystem.sh
