--- a/hello/docker/Dockerfile
+++ b/hello/docker/Dockerfile
@@ -1,7 +1,8 @@
 #
 # ***** BEGIN LICENSE BLOCK *****
 # 
-# Copyright (C) 2009-2021 Olof Hagsand
+# Copyright (C) 2009-2019 Olof Hagsand
+# Copyright (C) 2020-2022 Olof Hagsand and Rubicon Communications, LLC
 #
 # This file is part of CLIXON
 #
