--- a/openconfig/docker/Makefile.in
+++ b/openconfig/docker/Makefile.in
@@ -1,7 +1,7 @@
 #
 # ***** BEGIN LICENSE BLOCK *****
 # 
-# Copyright (C) 2020 Olof Hagsand and Rubicon Communications, LLC
+# Copyright (C) 2020-2022 Olof Hagsand and Rubicon Communications, LLC
 #
 # This file is part of CLIXON
 #
