--- a/hello/src/Makefile.in
+++ b/hello/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # ***** BEGIN LICENSE BLOCK *****
 # 
-# Copyright (C) 2020-2022 Olof Hagsand and Rubicon Communications, LLC
+# Copyright (C) 2020-2023 Olof Hagsand and Rubicon Communications, LLC
 #
 # This file is part of CLIXON
 #
@@ -74,9 +74,11 @@ clean:
 distclean: clean
 	rm -f Makefile *~ .depend
 
-install: $(CLISPECS) $(APPNAME).xml
-	install -d -m 0755 $(DESTDIR)$(sysconfdir)
-	install -m 0644 $(APPNAME).xml $(DESTDIR)$(sysconfdir)
+install: $(CLISPECS) $(APPNAME).xml autocli.xml restconf.xml
+	install -d -m 0755 $(DESTDIR)$(sysconfdir)/clixon
+	install -d -m 0755 $(DESTDIR)$(sysconfdir)/clixon/$(APPNAME)
+	install -m 0644 $(APPNAME).xml $(DESTDIR)$(sysconfdir)/clixon
+	install -m 0644 autocli.xml restconf.xml $(DESTDIR)$(sysconfdir)/clixon/$(APPNAME)
 	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)
 	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)/clispec
 	install -m 0644 $(CLISPECS) $(DESTDIR)$(libdir)/$(APPNAME)/clispec
@@ -87,7 +89,8 @@ install: $(CLISPECS) $(APPNAME).xml
 	install -m 0644 $(YANGSPECS) $(DESTDIR)$(YANG_INSTALLDIR)
 
 uninstall: 
-	rm -rf $(DESTDIR)$(sysconfdir)/$(APPNAME).xml
+	rm -f $(DESTDIR)$(sysconfdir)/$(APPNAME).xml
+	rm -rf $(DESTDIR)$(sysconfdir)/$(APPNAME)
 	rm -rf $(DESTDIR)$(libdir)/$(APPNAME)
 	rm -rf $(DESTDIR)$(localstatedir)/$(APPNAME)
 	for i in $(YANGSPEC) ; \
