--- a/wifi/src/Makefile.in
+++ b/wifi/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # ***** BEGIN LICENSE BLOCK *****
 # 
-# Copyright (C) 2020-2022 Olof Hagsand and Rubicon Communications, LLC
+# Copyright (C) 2020-2023 Olof Hagsand and Rubicon Communications, LLC
 #
 # This file is part of CLIXON
 #
@@ -84,9 +84,11 @@ clean:
 distclean: clean
 	rm -f Makefile *~ .depend
 
-install: $(CLISPECS) $(APPNAME).xml $(PLUGIN)
-	install -d -m 0755 $(DESTDIR)$(sysconfdir)
-	install -m 0644 $(APPNAME).xml $(DESTDIR)$(sysconfdir)
+install: $(CLISPECS) $(APPNAME).xml autocli.xml $(PLUGIN)
+	install -d -m 0755 $(DESTDIR)$(sysconfdir)/clixon
+	install -d -m 0755 $(DESTDIR)$(sysconfdir)/clixon/$(APPNAME)
+	install -m 0644 $(APPNAME).xml $(DESTDIR)$(sysconfdir)/clixon
+	install -m 0644 autocli.xml $(DESTDIR)$(sysconfdir)/clixon/$(APPNAME)
 	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)
 	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)/clispec
 	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)/backend
@@ -99,7 +101,8 @@ install: $(CLISPECS) $(APPNAME).xml $(PLUGIN)
 	install -m 0644 $(INSTALLFLAGS) $(PLUGIN) $(DESTDIR)$(libdir)/$(APPNAME)/backend
 
 uninstall: 
-	rm -rf $(DESTDIR)$(sysconfdir)/$(APPNAME).xml
+	rm -f $(DESTDIR)$(sysconfdir)/$(APPNAME).xml
+	rm -rf $(DESTDIR)$(sysconfdir)/$(APPNAME)
 	rm -rf $(DESTDIR)$(libdir)/$(APPNAME)
 	rm -rf $(DESTDIR)$(localstatedir)/$(APPNAME)
 	for i in $(YANGSPEC) ; \
