--- a/hello/src/hello.xml.in
+++ b/hello/src/hello.xml.in
@@ -1,20 +1,20 @@
 <clixon-config xmlns="http://clicon.org/config">
-  <!-- NOTE: hello.xml may not follow the way you set -\-prefix, -\-sysconfdir and others, you may need to hand-edit them to the values you used in the ./configure call. -->
-  <CLICON_CONFIGFILE>/usr/local/etc/clixon/hello.xml</CLICON_CONFIGFILE>
-  <CLICON_CONFIGDIR>/usr/local/etc/clixon/hello</CLICON_CONFIGDIR>
+  <CLICON_CONFIGFILE>@sysconfdir@/clixon/hello.xml</CLICON_CONFIGFILE>
+  <CLICON_CONFIGDIR>@sysconfdir@/clixon/hello</CLICON_CONFIGDIR>
   <CLICON_FEATURE>ietf-netconf:startup</CLICON_FEATURE>
   <CLICON_FEATURE>clixon-restconf:allow-auth-none</CLICON_FEATURE>
-  <CLICON_YANG_DIR>/usr/local/share/clixon</CLICON_YANG_DIR>
+  <CLICON_YANG_DIR>@datadir@/clixon</CLICON_YANG_DIR>
   <CLICON_YANG_MODULE_MAIN>clixon-hello</CLICON_YANG_MODULE_MAIN>
   <CLICON_CLI_MODE>hello</CLICON_CLI_MODE>
-  <CLICON_CLISPEC_DIR>/usr/local/lib/hello/clispec</CLICON_CLISPEC_DIR>
-  <CLICON_SOCK>/usr/local/var/hello.sock</CLICON_SOCK>
-  <CLICON_BACKEND_PIDFILE>/usr/local/var/hello.pidfile</CLICON_BACKEND_PIDFILE>
+  <CLICON_CLISPEC_DIR>@libexecdir@/hello/clispec</CLICON_CLISPEC_DIR>
+  <CLICON_SOCK>@localstatedir@/hello.sock</CLICON_SOCK>
+  <CLICON_BACKEND_PIDFILE>@localstatedir@/hello.pidfile</CLICON_BACKEND_PIDFILE>
   <CLICON_BACKEND_RESTCONF_PROCESS>true</CLICON_BACKEND_RESTCONF_PROCESS>
-  <CLICON_XMLDB_DIR>/usr/local/var/hello</CLICON_XMLDB_DIR>
+  <CLICON_XMLDB_DIR>@localstatedir@/hello</CLICON_XMLDB_DIR>
   <CLICON_STARTUP_MODE>init</CLICON_STARTUP_MODE>
   <CLICON_SOCK_GROUP>clicon</CLICON_SOCK_GROUP>
   <CLICON_NETCONF_HELLO_OPTIONAL>true</CLICON_NETCONF_HELLO_OPTIONAL>
   <CLICON_RESTCONF_USER>clicon</CLICON_RESTCONF_USER>
   <CLICON_RESTCONF_PRIVILEGES>drop_perm</CLICON_RESTCONF_PRIVILEGES>
+  <CLICON_RESTCONF_INSTALLDIR>@sbindir@</CLICON_RESTCONF_INSTALLDIR>
 </clixon-config>
